# tts_looper

./: .gitmodules  Cargo.toml  README.md
app/: Cargo.toml
app/src/: main.rs
deepspeech-sys/: Cargo.toml  build.rs
deepspeech-sys/res/windows/: .gitattributes
flite/: Cargo.toml
flite-sys/: Cargo.toml  bindings.h  build.rs
flite-sys/src/: flite_voice_list.c  lib.rs
flite/src/: lib.rs
gui/: Cargo.toml  build.rs
gui/cpp/: .clang-format  .clang-tidy  CMakeLists.txt  gui.cpp  gui.h
gui/cpp/res/: Main.qml
gui/src/: lib.rs
tts-loop/: Cargo.toml  build.rs
tts-loop/res/: .gitattributes  deepspeech-0.9.3-models.tflite
tts-loop/src/: audio.rs  channel.rs  lib.rs  logger.rs
tts-loop/src/gui/: mod.rs  rich_text.rs
tts-loop/src/gui/cpp/: CMakeLists.txt  gui.cpp  gui.h
tts-loop/src/gui/cpp/res/: Main.qml
