[package]
name = "tts-loop-app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flite = { path = "../flite" }
gui = { path = "../gui" }
tts-loop = { path = "../tts-loop" }
rodio = "0.14"
deepspeech = "0.9.0"
hound = "3.4.0"
log = "0.4.14"
env_logger = "0.9.0"
