[package]
name = "tts-loop"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
flite = { path = "../flite" }
deepspeech = "0.9.0"
rodio = "0.14"
thiserror = "1.0.30"
env_logger = "0.9.0"
hound = "3.4.0"

[build-dependencies]
cmake = "0.1"
bindgen = "0.59"
