[package]
name = "tts-loop"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.13.4"
deepspeech = "0.9.0"
env_logger = "0.9.0"
flite = { path = "../flite" }
hound = "3.4.0"
log = "0.4.14"
once_cell = "1.9.0"
thiserror = "1.0.30"
v_htmlescape = "0.14.1"

[build-dependencies]
bindgen = "0.59"
cmake = "0.1"
